--- a/.gitignore
+++ b/.gitignore
@@ -376,3 +376,7 @@ HlidacStatu.Q.ClassificationRepair/appsettings.json
 
 HlidacStatu.ClassificationRepair/appsettings.json
 Web.Statu/WebApp.Stage_Release.config.bak
+Web.Statu/App_Data/KIndexCompanies.filecache.content
+Web.Statu/App_Data/KIndexCompanies.filecache.data
+Web.Statu/App_Data/KIndexStat.filecache.content
+Web.Statu/App_Data/KIndexStat.filecache.data
